--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 main:
-  components_repository: "https://github.com/aragonanalytics/Project-Build-an-ML-Pipeline-Starter/tree/main/components"
+  components_repository: "https://github.com/aragonanalytics/Project-Build-an-ML-Pipeline-Starter.git#components"
   # All the intermediate files will be copied to this directory at the end of the run.
   # Set this to null if you are running in prod
   project_name: nyc_airbnb
